# AI-Model-Validation

./: .dockerignore  AI Model Validation.ipynb  Dockerfile  docker-compose.prod.yml  docker-compose.yml  makefile  pyproject.toml  setup.py
demo/: app.py
scripts/: start_mlflow_server.py
services/api/: main.py
src/ai_validation/: _init_.py
src/ai_validation/core/: _init_.py  data_quality.py  model_builder.py  model_evaluation.py  pipeline.py
src/ai_validation/integration/: mlflow_tracker.py
src/ai_validation/utils/: report_generator.py
test/: test_data_quality.py  test_model_evaluation.py  text_intergration.py
